--- a/plat-admin/src/main/resources/application-dev.yml
+++ b/plat-admin/src/main/resources/application-dev.yml
@@ -2,10 +2,10 @@ plus:
   jdbc:
     data-source-list:
       - name: datasource1
-        driverClassName: org.mysql.jdbc.Driver
-        url: jdbc:mysql://192.168.1.7:3306/home_plat?zeroDateTimeBehavior=convertToNull
+        driverClassName: com.mysql.cj.jdbc.Driver
+        url: jdbc:mysql://localhost:3306/home_plat?serverTimezone=UTC
         username: root
-        password: 321321
+        password: 123123
     enable-sharding: true
     default-data-source: datasource1
 eureka:
