--- a/plat-admin/src/main/resources/application-dev.yml
+++ b/plat-admin/src/main/resources/application-dev.yml
@@ -3,9 +3,9 @@ plus:
     data-source-list:
       - name: datasource1
         driverClassName: com.mysql.cj.jdbc.Driver
-        url: jdbc:mysql://localhost:3306/home_plat?serverTimezone=UTC
+        url: jdbc:mysql://122.51.38.127:3306/home_plat?serverTimezone=UTC
         username: root
-        password: 123123
+        password: abc*123
     enable-sharding: true
     default-data-source: datasource1
 eureka:
