--- a/plat-common/pom.xml
+++ b/plat-common/pom.xml
@@ -29,6 +29,11 @@
         </dependency>
         <dependency>
             <groupId>home-service</groupId>
+            <artifactId>resource-spring-boot-starter</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>home-service</groupId>
             <artifactId>plat-sdk</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
