--- a/plat-common/pom.xml
+++ b/plat-common/pom.xml
@@ -32,6 +32,10 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-cache</artifactId>
+        </dependency>
+        <dependency>
             <groupId>home-service</groupId>
             <artifactId>plat-sdk</artifactId>
             <version>1.0-SNAPSHOT</version>
